1998-09-27  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: Make it require libgtop >= 0.26.2.

1998-09-24  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-ghttp-check.m4: Add checks for -lsocket -lnsl.

1998-09-18  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4: Remove commented out code.

1998-09-12  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4: Added (AC_SUBST): `libgtop_have_sysinfo'.

1998-09-09  Martin Baulig  <baulig@merkur.uni-trier.de>

	* gnome-libgtop-sysdeps.m4: Added check for SMP support.
	(--with-libgtop-smp): New parameter, default is to enable
	it only if you're running configure on a SMP system.
	Added (AC_DEFINE): `HAVE_LIBGTOP_SMP' if enabled.
	(LIBGTOP_SMP): New automake conditional.

1998-09-02  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4: Remove check for `canonicalize_file_name'.

1998-09-02  Martin Baulig  <martin@home-of-linux.org>

	* gnome-support.m4: Check for canonicalize_file_name () and
 	realpath () and add `canonicalize.o' to LIBOBJS if required.

1998-08-30  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: Added (AC_SUBST): `LIBGTOP_VERSION_CODE'.
	Added (AC_DEFINE_UNQUOTED): `LIBGTOP_VERSION', `LIBGTOP_VERSION_CODE',
	`LIBGTOP_{MAJOR,MINOR,MICRO,SERVER}_VERSION'.

1998-08-29  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: Make it require libgtop >= 0.26.0.
	Added (AC_SUBST): `LIBGTOP_INTERFACE_AGE' and `LIBGTOP_BINARY_AGE'.

1998-08-27  Christopher Blizzard  <blizzard@appliedtheory.com>

	* gnome-ghttp-check.m4: Umm...I think this works better.  Doesn't
 	break anything anyway.
	Oooo...it actually works now.  Forgot a ,

1998-08-26  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4 (GNOME_INIT_LIBGTOP): Make it work
	with a brain-dead /bin/sh and a brain-dead /bin/test.
	
	* gnome-libgtop-check.m4 (GNOME_INIT_LIBGTOP): Use `AC_MSG_WARN'