@@ -1,3 +1,8 @@
+1998-09-28  Martin Baulig  <martin@home-of-linux.org>
+
+	* compiler-flags.m4 (--enable-warn-unused): New configure parameter
+	to add `-Wunused' to the warning flags.
+	
 1998-09-27  Martin Baulig  <martin@home-of-linux.org>
 
 	* gnome-libgtop-check.m4: Make it require libgtop >= 0.26.2.
